--- a/src/canvas.html
+++ b/src/canvas.html
@@ -5,11 +5,20 @@
     <meta charset="utf-8" />
 </head>
 <body>
-    <script type="text/javascript" src="canvas.js"></script>
 
     <p>
         <button id="Start" onclick="StartButtonClicked()">Click Me</button>
     </p>
 
+    <style type="text/css">
+        canvas {
+            border: 1px solid black;
+            background-color: lightgrey;
+        }
+    </style>
+    <div id="Canvas">
+        <canvas></canvas>
+        <script type="text/javascript" src="canvas.js"></script>
+    </div>
 </body>
 </html>
