--- a/src/canvas.html
+++ b/src/canvas.html
@@ -17,8 +17,10 @@
             background-color: lightgrey;
         }
     </style>
-    <div id="Canvas">
-        <canvas id="Graph1"></canvas>
+    <div id="Graphs">
+        <div id="DivForFirstCanvas" style="position: absolute;">
+            <canvas id="Graph1"></canvas>
+        </div>
         <canvas id="Graph2"></canvas>
         <script type="text/javascript" src="canvas.js"></script>
     </div>
