--- a/JQuery/ShuffleString/index.html
+++ b/JQuery/ShuffleString/index.html
@@ -4,9 +4,10 @@
 	<meta charset="UTF-8">
 	<title>Shuffle</title>
 </head>
+<body>
 	<h1>helloworld</h1>
 	<script src="js/jquery.min.js"></script>
-<body>
-
+	<script src="js/jquery.shuffle-string.js"></script>
+	<script src="js/script.js"></script>
 </body>
 </html>
